--- a/config.yml
+++ b/config.yml
@@ -803,6 +803,19 @@ D29SevereIncludeNotMolecConfirmed: # use competing risk methods
   txt.endpoint: COVID
   txt.coxph.note2: No. at-risk = estimated number in the population for analysis, i.e. baseline negative per-protocol vaccine recipients not experiencing the COVID endpoint or infected through 6 days post Day 29 visit; no. cases = number of this cohort with an observed severe COVID endpoint.
 
+D29ModerateIncludeNotMolecConfirmed: # use competing risk methods
+  ph1: ph1.D29
+  ph2: ph2.D29
+  wt: wt.D29
+  WtStratum: Wstratum
+  EventIndPrimary: ModerateEventIndPrimaryIncludeNotMolecConfirmedD29
+  EventTimePrimary: EventTimePrimaryIncludeNotMolecConfirmedD29
+  Earlyendpoint: EarlyendpointD29
+  tpeak: 29
+  tpeaklag: 7
+  txt.endpoint: COVID
+  txt.coxph.note2: No. at-risk = estimated number in the population for analysis, i.e. baseline negative per-protocol vaccine recipients not experiencing the COVID endpoint or infected through 6 days post Day 29 visit; no. cases = number of this cohort with an observed severe COVID endpoint.
+
 # sensitivity analyses for D29 markers, starting at 1, instead of 7, day after D29 visit
 # IncludeNotMolecConfirmed, for ensemble
 D29IncludeNotMolecConfirmedstart1:
